<resources>
    <string name="app_name">Event_Tracking_app_Kondieieva</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="calendar">calendar</string>
    <string name="event_tracker">Event Tracker</string>
    <string name="home">Month</string>
    <string name="week">Week</string>
    <string name="today">Today</string>
    <string name="add_event">Add event</string>
    <string name="event_date_month">February</string>
    <string name="event_date_day">15</string>
    <string name="event_date_year">2026</string>
    <string name="event_title">Event Title</string>
    <string name="event_time">12:00 pm</string>
    <string name="event_title_and_time">Event title and time</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_event_title">Title</string>
    <string name="add_event_description">Description (optional)</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="add_new_event_title_top">Add/Update event</string>
    <string name="would_you_like_to_recieve_a_reminder">Would you like to recieve a reminder?</string>
    <string name="radio_yes_label">Yes</string>
    <string name="radio_no_label">No</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="edit_event">Edit event</string>
    <string name="delete_event">Delete event</string>
    <string name="back_out_button">Back out</string>
    <string name="more_options">More options</string>
    <string name="full_event_title">Event Title</string>
    <string name="full_event_description">Full description of the event goes here... The line can take up to 3 lines</string>
    <string name="full_event_date">25 October 2026</string>
    <string name="full_event_time">10:20 pm</string>
    <string name="full_event_reminder_is">Reminder is</string>
    <string name="full_event_reminder_status">enabled</string>
    <string name="event_tracking_logo">Event Tracking Logo</string>
    <string name="sms_prompt_title">Allow Event Tracking app to send you SMS notifications?</string>
    <string name="sms_prompt_description">Granting permission will allow the app to send automated notifications for upcoming events. If permission is denied, SMS notifications will be disabled, though all other app features will remain active.</string>
    <string name="deny_button">Deny</string>
    <string name="allow_button">Allow</string>
</resources>