<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color">

    <!--Back button-->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/arrow_back"
        android:focusable="true"
        android:clickable="true"
        android:contentDescription="@string/back_out_button"
        style="@style/edit_delete_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <!-- Options edit/delete -->
    <ImageButton
        android:id="@+id/more_option_button"
        style="@style/edit_delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:contentDescription="@string/more_options"
        android:focusable="true"
        android:src="@drawable/more_option" />

    <!-- Event title -->
    <TextView
        android:id="@+id/full_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_event_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@id/back_button"
        android:layout_marginTop="16dp"/>

    <!-- Event description -->
    <TextView
        android:id="@+id/full_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_event_description"
        android:textSize="20sp"
        android:layout_below="@id/full_event_title"
        android:layout_marginTop="30dp"/>

    <!-- Event Date -->
    <TextView
        android:id="@+id/full_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_event_date"
        android:textSize="16sp"
        android:layout_below="@id/full_event_description"
        android:layout_marginTop="15dp"/>

    <!-- Event Time -->
    <TextView
        android:id="@+id/full_event_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_event_time"
        android:textSize="16sp"
        android:layout_below="@id/full_event_date"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/full_event_time"
        android:layout_marginTop="40dp">

    <!-- Reminder -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_event_reminder_is"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_event_reminder_status"
            android:textSize="17sp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>