<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/background_color">


    <!-- App Logo -->
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/app_logo"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/event_tracking_logo" />

    <!-- Prompt title -->
    <TextView
        android:id="@+id/sms_prompt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_prompt_title"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <!-- Prompt description -->
    <TextView
        android:id="@+id/sms_prompt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_prompt_description"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"/>

    <!-- Allow and Deny buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp">
        <Button
            android:id="@+id/deny_sms_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/cancel_button"
            android:text="@string/deny_button"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/allow_sms_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/login_sign_up_button"
            android:text="@string/allow_button"
            android:textSize="18sp"
            android:layout_marginStart="32dp"/>
    </LinearLayout>



</LinearLayout>