<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_event_title_top"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:textColor="@color/text_primary_color"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"/>

        <!-- Event title -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_event_title"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Event description -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_event_description"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Event date -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Event time -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Reminder -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/would_you_like_to_recieve_a_reminder"
            android:textColor="@color/text_primary_color"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp" />

        <RadioGroup
            android:id="@+id/radio_buttons_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_yes_label"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/radio_no_label" />
        </RadioGroup>

    <!-- Save and Cancel buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                style="@style/cancel_button"
                android:text="@string/cancel_button"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                style="@style/login_sign_up_button"
                android:text="@string/save_button"
                android:textSize="18sp"
                android:layout_marginStart="32dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>