<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@color/background_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Logo and name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="40dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/calendar"
                android:src="@drawable/app_logo" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_tracker"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:textColor="@color/primary_color"
                />
        </LinearLayout>

        <!-- Login -->

        <LinearLayout
            android:id="@+id/login_layout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:padding="25dp">

            <EditText
                android:id="@+id/login_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                style = "@style/login_sign_up_edit_text" />

            <EditText
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                style = "@style/login_sign_up_edit_text" />

            <Button
                android:id = "@+id/login_button"
                android:text = "@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="16dp"
                style="@style/login_sign_up_button" />

            <TextView
                android:id="@+id/switch_to_sign_up"
                android:text="@string/don_t_have_an_account_yet_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                style = "@style/login_sign_up_link"/>
        </LinearLayout>



        <!-- Sign Up -->

        <LinearLayout
            android:id="@+id/sign_up_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:padding="25dp">

            <EditText
                android:id="@+id/sign_up_first_name"
                android:inputType="textPersonName"
                android:hint="@string/first_name"
                android:autofillHints="givenName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                style = "@style/login_sign_up_edit_text"/>

            <EditText
                android:id="@+id/sign_up_last_name"
                android:inputType="textPersonName"
                android:hint="@string/last_name"
                android:autofillHints="familyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                style = "@style/login_sign_up_edit_text"/>

            <EditText
                android:id="@+id/sign_up_phone_number"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:autofillHints="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                style = "@style/login_sign_up_edit_text"/>

            <EditText
                android:id="@+id/sign_up_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                style = "@style/login_sign_up_edit_text"/>

            <EditText
                android:id="@+id/sign_up_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                style = "@style/login_sign_up_edit_text"/>

            <EditText
                android:id="@+id/sign_up_confirm_password"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:autofillHints=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                style = "@style/login_sign_up_edit_text"/>

            <Button
                android:id = "@+id/sign_up_button"
                android:text = "@string/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="16dp"
                style="@style/login_sign_up_button"
               />

            <TextView
                android:id="@+id/switch_to_login"
                android:text="@string/have_an_account_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                style = "@style/login_sign_up_link" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>